# acl2026

./: README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
notebooks/: analysis_notebook.ipynb
scripts/: ablation_weight_decay.py  analyze_model.py  pythia_analysis.py  run_all_experiments.sh  train_rnn.py  train_transformer.py
src/: __init__.py
src/analysis/: __init__.py  activation_patching.py  attention_analysis.py  visualization.py
src/data/: __init__.py  counter_dataset.py
src/models/: __init__.py  rnn.py  rope.py  transformer.py
src/training/: __init__.py  trainer.py
tests/: __init__.py  test_analysis.py  test_data.py  test_models.py  test_training.py
